emi dropdown z-index fix

--- a/app/_css/modal.sass
+++ b/app/_css/modal.sass
@@ -276,6 +276,11 @@ i
   height: 317px;
   background: #fff;
   backface-visibility: none;
+  &.emi-focus
+    position: relative;
+    z-index: 10;
+    #form-fields
+      z-index: 2;
 
 #form, #form-fields
   height: 100%;
